--- a/lesson01_controller_base/lesson1-3.html
+++ b/lesson01_controller_base/lesson1-3.html
@@ -12,7 +12,7 @@
 		</div>
 	</body>
 	<!-- js文件应该独立出来 -->
-	<script src='/angular.js'></script>
+	<script src='../components/angular/angular.js'></script>
 	<script>
 	angular.module('myApp',[])
 	.run(function($rootScope) {
