--- a/lesson01_controller_base/lesson1-5.html
+++ b/lesson01_controller_base/lesson1-5.html
@@ -16,7 +16,7 @@
 		</div>
 	</body>
 	<!-- js文件应该独立出来 -->
-	<script src='/angular.js'></script>
+	<script src='../components/angular/angular.js'></script>
 	<script>
 	//控制器初始完毕后 将 方法 和属性传递到 对应 的视图中
 	angular.module('myApp',[])
